--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,345 +1,169 @@
 html{
     height: 100vh;
+    background: url("../images/imgContact.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
-body{
+
+
+body {
     animation-name: fondu;
     animation-duration: 1s;
     /* font-family: 'Zilla Slab' sans-serif;*/
-    background-color: #eeeeee;
-    height: 105%;
+    /*  background-color: #eeeeee;**/
+    height: 100vh;
 }
 @keyframes fondu {
-    from{
+    0%{
         opacity: 0;
     }
-    to{
+    100%{
         opacity: 1;
     }
 }
 
-header{
-    display: flex;
-    justify-content: space-between;
-    align-content: space-between;
-    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-    /* background-color: rgb(255, 255, 255); */
-    background-color: #4b515d;
-}
-
-.he1{
-    display: flex;
-    align-items: center;
-}
 h1{
     color: #FFFFFF;
-    font-size: 3rem;
-    font-weight: bold;
-    font-family: 'Roboto', sans-serif;
+    font-size: 2.05rem;
+    font-family: 'Stencil', sans-serif;
     cursor: default;
     margin-bottom: 0.5rem;
-
+    margin-top: 0.5rem;
 }
 
-.logo{
-    width: 10%;
-}
-/* Gestion du menu */
-
-p.burger{
-    line-height: 1;
-    font-size:2.5rem;
-    color: #ffffff;
-    right: 0;
-    margin-right: 5rem;
-    margin-top: 3.5rem;
-
-    cursor: pointer;
-}
-
-p.burger::before {
-    content: '\2630';
-}
-
-/* Icone Fermeture */
-
-#fermeture_menu{
-    text-align: right ;
-    border : none ;
-    padding : 0 ;
-    margin-right: 0rem;
-    color: #000000;
-    cursor: pointer;
-}
-
-#fermeture_menu::before {
-    content: '\2716';
-    font-size: 2rem;
-}
-
-/* Navigation Bar */
-
-nav#menu{
-    animation-name: fondu ;
-    animation-duration: 0.5s;
-
-}
-@keyframes fondu {
-    from{
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-@keyframes fondu {
-    from{
-        opacity: 0;
-    }
-    to{
-        opacity: 1;
-    }
-}
-
-
-nav{
-    display: none;
-    z-index: 1 ;
-    position: fixed ;
-    top : 0 ;
-    right: 0;
-    height: 100vh;
-    font-size: 1.5rem ;
-    text-align: right ;
-}
-
-nav li a img{
-    width: 24px;
-    height: 24px;
-    padding-right: 1rem;
-    margin-top: 1rem;
-}
-
-nav.ouvert{
-    right : 0 ;
-    display: block;
-    background-color: #efebeb;
-    padding-left: 1.25rem;
-}
-
-
-nav li{
-    padding : 2.5rem 0 ;
-    margin-right: 2rem;
-    margin-top: 1rem;
-}
-
-nav ul{
-    padding : 1.2rem 2rem;
-}
-
-nav li:last-of-type{
-    border : none ;
-}
-
-nav ul a {
-    display:block;
-    color: #000000;
-    text-decoration:none;
-    cursor: pointer;
-    text-align: center;
-    padding-bottom: 0.5rem;
-    font-family: 'Roboto', serif;
-}
-
-nav li a:hover{
-    border-bottom: black solid 2px;
-    font-weight: bold;
-}
-
-/* Page contact */
-
-.contact{
+.texteDescriptif{
     display: flex;
     justify-content: center;
-    margin-top: 1rem;
 }
 
-.contact p{
-    font-family: 'Roboto' , sans-serif;
-    color: #000000;
-    font-weight: bold;
-    font-size: 28px;
-}
-main{
-    height: 100%;
-}
-
-.reso{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.texteDescriptif h2{
     margin-top: 2rem;
+    color: #FFFFFF;
+    font-family: 'Exo2', sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    padding-bottom: 1rem;
+}
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    /*background-color: #282828;*/
+    align-items: center;
+    top: 0;
+    padding: 0.5rem 1rem;
+
+}
+
+.nav{
+    display: flex;
+    list-style: none;
+    flex-direction: row;
+    margin-bottom: 0;
+    margin-top: 0;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.nav li a{
+    list-style: none;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    font-family: 'Exo2', sans-serif;
+    color: #b4b4be;
+    text-transform: uppercase;
+}
+
+
+.nav li a:hover{
+    border-bottom: 4px solid greenyellow;
+    color: greenyellow;
+
+}
+
+
+.overlay{
+    background: #000000;
+    opacity: .75;
+    height: inherit;
+}
+
+.containerContact{
+    padding-top: 4rem;
+    margin-left: 12rem;
+    margin-right: 12rem;
+
+}
+
+.containerBureau{
+    display: flex;
+    flex-direction: column;
+    background-color: #3e3f3a;
+    width: 100%;
+    justify-content: space-between;
+    border-radius: 15px;
+    padding: 1rem;
     margin-bottom: 2rem;
 }
 
-.reso .facebook{
-    margin-right: 6rem;
-}
-
-.reso .insta{
-    margin-left: 6rem;
-}
-
-.reso img{
-    width: 74px;
-}
-
-
-h2{
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
+.containerBureau h2{
+    font-family: 'Exo2', sans-serif;
+    font-size: 30px;
+    color: greenyellow;
     font-weight: bold;
-    font-size: 22px;
-    margin-top: 2rem;
-    margin-left: 4rem;
-    margin-right: 4rem;
+    border-left: 4px solid greenyellow;
+    padding-left: 1rem;
 }
 
-h3{
+.containerBureau li{
+    color: white;
     text-align: center;
-    font-family: 'Roboto', sans-serif;
+    margin-top: 1rem;
+    font-family: 'Exo2', sans-serif;
     font-size: 18px;
-    padding-top: 1rem;
+    margin-left: 2.5rem;
 }
 
-h4 .send{
-    text-align: center;
-    font-family: Roboto , sans-serif;
+.bold{
     font-weight: bold;
-    color: red;
 }
 
-.questionsform{
-    text-align: center;
-    font-family: 'Montserrat' , sans-serif;
-    font-weight: bold;
-    font-size: 40px;
-    margin: 3.5rem 4rem;
-}
-/* Form contact */
-
-
-.form1{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.containerBureau ul{
     margin-bottom: 2rem;
 }
 
-.form1 label{
-    margin-bottom: 1rem;
-    font-family: Roboto , sans-serif;
-    font-weight: bold;
-    font-size: 22px ;
-}
-
-.form1 input{
-    display: block;
-    font-size: 16px;
-    border: 1px solid #FFFFFF;
-    padding: 6px 10px;
-    height: 30px;
-    width: 20%;
-    font-family: Roboto , sans-serif;
-    background: #4b515d;
-    border-radius: 15px;
-    color: #FFFFFF;
-    font-weight: bold;
-}
-.obligatoire{
-    color : red;
-}
-
-
-.form2{
+.texteContact{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-bottom: 2rem;
-}
-
-.form2 label{
-    margin-bottom: 1rem;
-    font-family: Roboto , sans-serif;
-    font-weight: bold;
-    font-size: 22px ;
-}
-
-.form2 textarea{
-    background: #4b515d;
-    color: #FFFFFF;
-    font-family: Roboto , sans-serif;
-    font-weight: bold;
-    font-size: 16px;
+    background-color: #3e3f3a;
+    width: 100%;
+    justify-content: space-between;
     border-radius: 15px;
-    padding: 0.75rem;
-}
+    padding: 1rem;
 
-.submit{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 6rem;
 }
-
-.submit input{
-    margin-right: 4rem;
-    border-radius: 30px;
-    border: 2px solid #FFFFFF;
-    padding: 14px 20px;
-    cursor: pointer;
+.texteContact p{
+    color: white;
     text-align: center;
-    letter-spacing: 0.15em;
-    line-height: 1;
-    font-family: Roboto , sans-serif;
-    font-size: 14px;
-    font-weight: bold;
-    background-color:#4b515d;
-    color: #FFFFFF;
-
-}
-
-.submit input:hover{
-    transition: 1.5s;
-    color: black;
-    background-color: #FFFFFF;
-    border: 1px solid black;
-}
-
-.submit .cpt{
-    margin-left: 4rem;
     margin-top: 1rem;
-    font-weight: bold;
-    font-family: Roboto , sans-serif;
+    font-family: 'Exo2', sans-serif;
+    font-size: 18px;
+    margin-left: 2.5rem;
 }
-/* Footer */
 
-.footer{
+.texteContact h2{
+    font-family: 'Exo2', sans-serif;
+    font-size: 30px;
+    color: greenyellow;
+    font-weight: bold;
+    border-left: 4px solid greenyellow;
+    padding-left: 1rem;
+}
+
+.containerRS{
     display: flex;
-    background-color: #4b515d;
-    justify-content: center;
-    align-items: center;
-    padding-top: 1rem;
-    border-top : 2px solid black;
-    bottom: 0;
-}
-
-.footer img{
-    width: 150px;
-    margin-right: 1rem;
-}
-
-.footer p {
-    font-family: 'Zilla Slab',serif;
-    font-weight: bold;
-    color:rgb(255, 255, 255);
+    justify-content: space-evenly;
+    margin-top: 1rem;
 }
