--- a/public/css/reglement.css
+++ b/public/css/reglement.css
@@ -114,12 +114,18 @@ h1{
 
 .containerBox{
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
     margin-top: 3rem;
 }
 
-.containerBox img{
-    width: 20%;
-    height: 5%;
+.containerBox a {
+    flex : 1;
+    margin: 10px;
+
+}
+
+.containerBox a>img{
+    width: 55%;
+    height: auto;
+    display: block;
 }
